Check for resolution again

--- a/.github/workflows/dotnetversion_resolution.yml
+++ b/.github/workflows/dotnetversion_resolution.yml
@@ -11,6 +11,9 @@ jobs:
     runs-on: self-hosted
 
     steps:
+      - name: Remove global dotnet
+        run: rm -rf /usr/local/share/dotnet ~/.dotnet
+
       - name: Checkout repository
         uses: actions/checkout@v5
 
