--- a/.github/workflows/dotnetversion_resolution.yml
+++ b/.github/workflows/dotnetversion_resolution.yml
@@ -1,9 +1,9 @@
 name: Minimal Setup-Dotnet Version Check - Resolution 1
 
 on:
-  push:
-    branches:
-      - main
+  # push:
+  #   branches:
+  #     - main
   workflow_dispatch:
 
 jobs:
