--- a/.github/workflows/dotnetversion_githosted.yml
+++ b/.github/workflows/dotnetversion_githosted.yml
@@ -18,7 +18,8 @@ jobs:
       - name: Use .NET 8.x
         uses: actions/setup-dotnet@v5
         with:
-          dotnet-version: '8.x'
+          # dotnet-version: '8.x'
+          global-json-file: global.json
         env:
           PROCESSOR_ARCHITECTURE: x86 # Or omit this if not needed
 
