--- a/.github/workflows/dotnetversion_githosted.yml
+++ b/.github/workflows/dotnetversion_githosted.yml
@@ -18,10 +18,9 @@ jobs:
       - name: Use .NET 8.x
         uses: actions/setup-dotnet@v5
         with:
-          # dotnet-version: '8.x'
-          global-json-file: global.json
+          dotnet-version: '8.x'
         env:
-          PROCESSOR_ARCHITECTURE: x64 # Or omit this if not needed
+          PROCESSOR_ARCHITECTURE: x86 # Or omit this if not needed
 
       - name: Show dotnet info
         run: dotnet --info
