--- a/.github/workflows/dotnetversion_githosted.yml
+++ b/.github/workflows/dotnetversion_githosted.yml
@@ -16,7 +16,7 @@ jobs:
         uses: actions/checkout@v5
 
       - name: Use .NET 8.x
-        uses: actions/setup-dotnet@v5
+        uses: actions/setup-dotnet@main
         with:
           dotnet-version: '8.x'
         env:
