--- a/.github/workflows/dotnetversion_githosted.yml
+++ b/.github/workflows/dotnetversion_githosted.yml
@@ -16,11 +16,10 @@ jobs:
         uses: actions/checkout@v5
 
       - name: Use .NET 8.x
-        uses: actions/setup-dotnet@main
+        uses: actions/setup-dotnet@v5
         with:
           dotnet-version: '8.x'
-        env:
-          PROCESSOR_ARCHITECTURE: x86 # Or omit this if not needed
+
 
       - name: Show dotnet info
         run: dotnet --info
